[package]
name = "nvjpeg-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custos = { path = "../../custos", default-features=false, features=["cuda", "static-api"] }

[dev-dependencies]
#custos = { version="0.6", default-features=false, features=["cuda"] }


